minor change to prevent titles overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ body {
 
 #map-title {
   text-align: center;
+  border-top: 40px;
 }
 
 #year {
